Adding event tracking..

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</header>
 
 			<!-- begin content div -->
-			<div class="content">
+			<div class="content" id="contents">
 				<!-- begin add div -->
 				<div class="add">
 
@@ -87,6 +87,16 @@
 					<!-- end import div -->
 					<div style="clear: both"></div>
 				</div>
+				<br />
+				
+				<!-- Begin Div for event tracking -->
+				<div>
+					<h3>Below is the activity which user is doing on this page</h3>
+					<p id="tracking">
+						
+					</p>
+				</div>
+				<!-- End Div for event tracking -->
 
 			</div>
 			<!-- End content div -->
@@ -100,5 +110,6 @@
 				<p>&copy; Copyright  by Phull, Raghuveer</p>
 			</footer>
 		</div>
+		
 	</body>
 </html>
